--- a/MPfm/branches/current/MPfm/Other Screens/frmPlaylist.resx
+++ b/MPfm/branches/current/MPfm/Other Screens/frmPlaylist.resx
@@ -112,12 +112,12 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1169, 17</value>
   </metadata>
   <data name="imageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -125,30 +125,27 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        AgAAAk1TRnQBSQFMAwEBAAEEAQABBAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABIAYAARD/AP8ANAADCAEJ+AABOQFyAUcB9QENAYEBKAH/AxkBIfQAAToBcgFLAfUBTQGh
-        AWkB/wFaAWYBXAHkAx0BJ+AAATUBjgFbAf4BLwGIAVMB/gEpAYYBTQH+ASMBggFIAf4BRAGfAWgB/wGB
-        AcEBlgH/AVABowFsAf8BWQFrAV0B5wMfASrcAAEzAZsBZQH/AZABygGpAf8BjQHIAaUB/wGKAcYBoQH/
-        AYgBxQGeAf8BdAG2AYUB/wGCAcIBlwH/AVIBpQFwAf8BUwFpAVcB6gMiATDYAAE7AZ8BbQH/AZQBzQGt
-        Af8BeQG6AY4B/wF1AbgBiQH/AXABtgGFAf8BawGzAYEB/wFxAbUBggH/AYMBwgGYAf8BRgGgAWYB/wEe
-        AX8BLAH82AABQQGjAXUB/wGWAc4BsAH/AZQBzQGtAf8BkQHLAaoB/wGQAcsBqAH/AX4BvAGQAf8BigHH
-        AaEB/wFQAaUBcgH/ASUBhwFBAf0DDQEP2AABRwGlAXkB/wFBAaMBbgH9AUEBoQFoAf0BQQGdAWIB/QFf
-        Aa8BgQH/AZEBywGqAf8BWQGrAX4B/wExAY8BRgH9AwoBDOwAAU4BgAFkAfUBZAGzAYEB/wEyAZgBYQH/
-        AwgBCfAAAVEBggFrAfUBOwGfAW8B/wMIAQn/AP8A/wD/ANwAAUIBTQE+BwABPgMAASgDAAFAAwABEAMA
+        AgAAAk1TRnQBSQFMAwEBAAEkAQABJAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARD/AP8ANAADBwEJ+AABQgFtAUcB9QEJAYEBJAH/AxgBIfQAAUIBbQFLAfUBSQGh
+        AWUB/wFaAWEBWgHkAxwBJ+AAATUBhgFbAf4BLwGAAVMB/gEpAX8BTQH+ASMBfwFIAf4BQAGfAWQB/wGB
+        AcEBlgH/AUwBowFoAf8BXAFkAVwB5wMdASrcAAEvAZsBYQH/AZABygGpAf8BjQHIAaUB/wGKAcYBoQH/
+        AYgBxQGeAf8BcAG2AYUB/wGCAcIBlwH/AU4BpQFsAf8BVQFjAVsB6gMhATDYAAE3AZ8BaQH/AZQBzQGt
+        Af8BdQG6AY4B/wFxAbgBiQH/AWwBtgGFAf8BZwGzAYEB/wFtAbUBggH/AYMBwgGYAf8BQgGgAWIB/wEi
+        AXsBKwH82AABPQGjAXEB/wGWAc4BsAH/AZQBzQGtAf8BkQHLAaoB/wGQAcsBqAH/AXoBvAGQAf8BigHH
+        AaEB/wFMAaUBbgH/ASkBhwFAAf0DCwEP2AABQwGlAXUB/wFAAaMBZgH9AUABoQFgAf0BQAGdAVoB/QFb
+        Aa8BgQH/AZEBywGqAf8BVQGrAXoB/wE1AY8BQgH9AwkBDOwAAVIBcwFcAfUBYAGzAYEB/wEuAZgBXQH/
+        AwcBCfAAAVUBdwFnAfUBNwGfAWsB/wMHAQn/AP8A/wD/ANwAAUIBTQE+BwABPgMAASgDAAFAAwABEAMA
         AQEBAAEBBQABgBcAA/8BAAL/BgAC/wYAAf8BfwYAAf4BPwYAAf4BHwYAAeABDwYAAeABBwYAAeABBwYA
         AeABBwYAAeABDwYAAf4BHwYAAf4BPwYAAv8GAAL/BgAC/wYAAv8GAAs=
 </value>
   </data>
-  <metadata name="toolPlaylist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>610, 17</value>
-  </metadata>
-  <metadata name="menuPlaylist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="menuPlaylist.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>136, 20</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <metadata name="fontCollection.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>836, 54</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAIAICAAAAEAIACoEAAAJgAAABAQAAABACAAaAQAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAAAA
