MPfm 0.5.0.3 - Added a system tray icon and menu. - Removed distortion display for the OutputMeter for now.
Related to issue #181.


git-svn-id: http://hamster-svn/svn/repos/base@172 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/frmMain.resx
+++ b/MPfm/branches/current/MPfm/frmMain.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
-        XwAAAk1TRnQBSQFMAgEBFwEAAUwBBAFMAQQBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        XwAAAk1TRnQBSQFMAgEBFwEAAWQBBAFkAQQBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABYAMAAQEBAAEgBgABYJIAQP/AAAT/A4EB/wPxAf8DgQH/A4EB/wOBAf8DqQH/A6QB/wOgAf8DpAH/
         A4EB/wOBAf8DgQH/A7gB/wOGAf8DgQH/YAADBwEJXAAE/wOBAf8D7gH/A4EB/wOBAf8DiQH/A5gB/wOB
         Af8DgQH/A4EB/wOkAf8DgQH/A4EB/wOBAf8DwgH/A4EB/1wAA1kB9QOBAf8DGAEhWAAE/wOBAf8DxQH/
@@ -563,7 +563,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADU
-        AQAAAk1TRnQBSQFMAwEBAAH0AQIB9AECARABAAEQAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        AQAAAk1TRnQBSQFMAwEBAAEMAQMBDAEDARABAAEQAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
         ARADAAEBAQABEAYAAQj/ACMAAVkBZ3wAAQEBFgHgAQ0BNwFfegABAQEaAYgBLgECARoBFgFbcAABRAEq
         AUMBJgMiAR4BZwEuARABSwGIATIBAgEaARYBW24AAWUBLgEyAVcBMQFTAREBUwERAU8BzQFCARABSwGJ
         ATIBAgEWARUBW2wAAWYCMgFXAe0BRgHtAUYBzAFCAcwBQgHMAUIBEAFPAYcBLgEAARJsAAGGATYBMgFb
@@ -582,78 +582,26 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAABMLAAATCwAAAAAAAAAA
-        AABDJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC///////zcW+/0MkC/9DJAv/QyQL/0MkC/9DJAv//////7Sn
-        nf9DJAv/jnxt/+bi3v9QMxv/QyQL/+bi3v/m4t7/QyQL/0MkC///////zcW+/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL///////Nxb7/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C//m4t7/zcW+/0MkC//Nxb7//////458bf9DJAv/5uLe/83Fvv9DJAv/QyQL///////Nxb7/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv//////83Fvv9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/+bi3v/Nxb7/UDMb////////////zcW+/0MkC//m4t7/zcW+/0MkC/9DJAv//////83F
-        vv9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC///////////////
-        ///m4t7/m4p9/0MkC/9DJAv/zcW+/9nTzv91Xkz//////8C2rv//////UDMb///////Atq7/QyQL/0Mk
-        C//////////////////m4t7/m4p9/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL////
-        ///m4t7/jnxt/83Fvv//////jnxt/0MkC//Nxb7/5uLe/6eZjf//////aVA8//////+CbVz//////7Sn
-        nf9DJAv/QyQL///////m4t7/jnxt/83Fvv//////jnxt/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv//////83Fvv9DJAv/UDMb///////Atq7/QyQL/8C2rv/m4t7/2dPO/83Fvv9DJAv/5uLe/7Sn
-        nf//////tKed/0MkC/9DJAv//////83Fvv9DJAv/UDMb///////Atq7/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC///////zcW+/0MkC/9QMxv//////83Fvv9DJAv/tKed//Lw7///////m4p9/0Mk
-        C/+nmY3/8vDv//////+bin3/QyQL/0MkC///////zcW+/0MkC/9QMxv//////83Fvv9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL///////m4t7/jnxt/83Fvv//////m4p9/0MkC/+nmY3/////////
-        //9cQSz/QyQL/3VeTP///////////5uKff9DJAv/QyQL///////m4t7/jnxt/83Fvv//////m4p9/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/5uLe////////////5uLe/6eZjf9DJAv/QyQL/5uK
-        ff//////5uLe/0MkC/9DJAv/QyQL/+bi3v//////jnxt/0MkC/9DJAv/5uLe////////////5uLe/6eZ
-        jf9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/5qc1v+Hgbb/f3+t/4aJtf+De6r/hoKz/3t/
-        r/+FgrD/hIG4/3V3rf+DgLf/fX2z/4J/tv97fbP/f4G3/35/t/9/f7X/fn60/35+tP9/f7X/f3+1/35+
-        tP+AfbT/gH20/3iCsv98erb/hIGz/4ODsf+Qh6//p5/I/0MkC/9DJAv/zZlS/9aeUf/aplP/1aJM/9ui
-        Tf/bo1H/26dU/9uiTf/hokb/4qdK/+uoTP/YpEb/5KZM/+SoTv/foUf/36NJ/+KnSv/ip0r/4aZJ/+Om
-        Sf/kp0r/5ahL/+SnSv/jpkn/5KZI/+SmTP/kpUv/16BL/9WcTf/Hl2P/QyQL/0MkC//Vn0j/8rxe//S9
-        Wv/8x1///sNf//e8Wf/6wV7/+8Bc//3AY//1vF//+71j//G9Y//0wGb//8Zu//jAZ//6vmT/975h//i/
-        Yv/4vWD/97xf//i9YP/5vmH/+L1g//m+Yf/yv2P/7rtd//jDYv/2xGT/+bxe/9KWUP9DJAv/QyQL/9ug
-        UP/xu2T/871f/+64Wf/zvV//9L1i//O3Xf/3vmH/7rxc//DAYf/twWT//8du/+nHav+oaRH/7chs//O8
-        Yf/uvl7/8b9f//K/X//xvl7/871e//G+Xv/wvl7/8L5e//a+X//4v2L/7rtb//PAX//6uFn/56JS/0Mk
-        C/9DJAv/r3tv/76Ugf/AlH3/w5d//72WgP+/lIP/ypmJ/8KXhP/DlH//vJSC/72Zif+OTUX/zamf/5FQ
-        SP+9o5P/zpOJ/8CXgP++lH3/wpN9/8aVf//Ek33/wpN9/8CUff+9k3z/vpmD/8iTif+8m4f/t5J4/8qX
-        g/+vfGj/QyQL/0MkC//dmUz/7rdi/+60W//us13/6bdk//S/b/+hZRn/9sFx//i6bP/nvXD//cmC/7Fd
-        HP+dYB7/ql0e/+3Mg/+qYR3/78Ft/+a3Y//ns2D/67Vi/+uzYf/rtWL/6rhl/+a3Y//swG3/rF4j/+u9
-        b//vu2H/7bBm/86cSv9DJAv/QyQL/9eWS//jsV//6bNe/+64Zf/lvG3/+cqA/5lhGv/5zIP/qV8X//HH
-        fP+gXh3/uFkh/65aIP+qWh//+9CN/6tYGv/4yHb/7Ldm/+iwX//ssWH/67Bg/+21ZP/yu2r/7Lpo//DK
-        eP+sWCT/779x//C2V//vrmT/zJ9I/0MkC/9DJAv/0ZlH/+KxYf/grmL/+cN8/6FdGv+xWBv/rFwb//XN
-        hf+bWxv//8uK/6VaHP+qXR//q1UZ/7dZHv+mWB3/rFwh/6dfH//swXj/77Zr/+G4af/uuGv/6cV3/65a
-        GP/6y4f/rVYd/6daIv/vwnn/6rNq/+2zaP/Hlkz/QyQL/0MkC/+neW7/rpOJ/8yjoP+DQUb/gkZM/3lH
-        S/96REn/gklM/4FIS/98R0r/fERJ/39HTP+LTVP/hUJJ/4BESv9/Q0n/gEBG/3hMTf/AoJv/hktJ/7+i
-        m/96SUf/gUZK/3tJTf+JSkz/gEBG/76onf99Tkb/vpyP/6J6bv9DJAv/QyQL/9acWv+YWRz/o1Mc/6lY
-        Jf+cVSP/pVYl/6xUJf+fVCD/qFUe/6VVIP+hWyX/l08Z/6BWIP+gVB//qFgj/6BUH/+5UiX/mFYh/6VX
-        Iv+mUxz/o1Ye/6FVIP+tVCL/qFMj/5xTIf+iVSf/mFgh/55UHP+kURn/2Jtd/0MkC/9DJAv/1ZBR/+TB
-        f//xyIr/rWk0/7dvP/+pajj/rW47/65tOv+qbTX/r243///Nk/+pcDn/rW85/6lwOf+wbDf/qXA5/65t
-        Ov/yy5T/5cuP/7JsNv/u0pX/q285/+zJkf+scj7/sm08/7hsQv/2z5j/pnA5//XGif/MlVj/QyQL/0Mk
-        C//BilH/3LR6/+C6hP/tyJb/o3RI/7dxSf+2dUn/78+e/6B4SP/zwpT/7saW/6t0R/+sb0P/q3RJ/61x
-        R/+ic0f/sHNH/9nAjv/ct4X/6LqK/+i6iv/iuYj/6sSU/6NxQ/+ldkD/sHJE/+fJkP/qvYT/4bh6/8KO
-        TP9DJAv/QyQL/5ttc/+7lZv/t5Se/7WUov+9na7/kV5y/5djdf+3nav/spen/7aUpf+5lab/j15y/5pi
-        ef+UYHf/kWB2/8yluv+NYXL/rZyn/66Uof+tkZ7/so6c/6qSnv+0mKX/wJ+u/5hjcf+WXXL/u5+s/6GO
-        l/+5mJ//lW1u/0MkC/9DJAv/uodP/925g//duoj/3rqM/9q9kP/syp//q4RY/+XGmf/ZuIv/2byP/9+8
-        kP/vzKH/qYFX/62BWP/vzKH/4b+U/+i+kf/owZT/2biK/965jf/mu5D/3bmL/+K5jP/hvY//6s2h/7Z/
-        YP/bw5n/47qT/9i2iP/GiVf/QyQL/0MkC//AglT/58GR/+K/k//jupP/47+b/+TAnP/rxJ7/3r+Y/+q7
-        lf/hwZj/4LuV/93Amf/v0Kn/tYtm/+jLpP/gvJb/4L2V/+a8l//avZb/48Kb/+K4k//hwJn/5LiT/92/
-        lv/ZwpT/8MKg/97Al//jwJj/6r2R/7uCTv9DJAv/QyQL/72DUv/vxZj/3cCZ/9zAof/jwaT/6cGk/+G8
-        mv/ixZ7/376d/+XEo//gv57/5MOi/+rJqP+1lHP/6Mem/+LBoP/hwJ//4cCf/+HAn//hwJ//4cCf/+HA
-        n//hwJ//4cCf/+PCm//bv6D/2sOd/+TDkv/lvaH/vodU/0MkC/9DJAv/kGd2/7ugsP+zobj/s6K9/7Ka
-        uP+3m7n/t6G6/7Gftv+2orn/s5+2/7Oftv+xnbT/tqK5/7WhuP+4pLv/sZ20/7Oftv+zn7b/s5+2/7Of
-        tv+zn7b/s5+2/7Oftv+zn7b/u5y3/7Wevv+sn7f/uqm0/7eeuP+RY2n/QyQL/0MkC/+pf1z/68im/+XK
-        qP/jx6j/8M6w/+vHqf/qy6z/48qo/+bFq//ox63/6Met/+vKsP/kw6n/7cyy/+fGrP/pyK7/6ciu/+nI
-        rv/pyK7/6ciu/+nIrv/pyK7/6ciu/+nIrv/qxq7/5cGv/+PIrv/qx6X/7saz/617V/9DJAv/QyQL/9+j
-        ef+1flP/tIBS/7yEVf+7f1H/u39R/7d+Uf+3hVf/u4RR/7uEUf+3gE3/vYZT/7yFUv+1fkv/u4RR/7uE
-        Uf+6g1D/uoNQ/7qDUP+6g1D/uoNQ/7qDUP+6g1D/uoNQ/72HS/+7gk//s4JQ/7SEVP+ldlr/0KaD/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0MkC/9DJAv/QyQL/0Mk
-        C/9DJAv/QyQL/0MkC/9DJAv/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAAAAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAAAAAAAP8AAAD/AAAA/wAAAP//////AAAA/wAAAP//////AAAA//////8AAAD//////wAA
+        AP8AAAD/AAAA/wAAAAAAAAD/AAAA/wAAAP8AAAD//////wAAAP8AAAD//////wAAAP//////AAAA////
+        //8AAAD/AAAA/wAAAP8AAAAAAAAA/wAAAP8AAAD/AAAA//////8AAAD/AAAA//////8AAAD//////wAA
+        AP//////AAAA/wAAAP8AAAD/AAAAAAAAAP8AAAD/AAAA/////////////////wAAAP//////AAAA////
+        //8AAAD//////wAAAP8AAAD/AAAA/wAAAAAAAAD/AAAA/wAAAP8AAAD//////wAAAP8AAAD/////////
+        //////////////////8AAAD/AAAA/wAAAP8AAAAAAAAA/wAAAP8AAAD/AAAA////////////AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAAAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA//////8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAAAAAAD/AAAA/wAAAP//////AAAA////
+        //8AAAD//////wAAAP///////////wAAAP8AAAD/AAAA/wAAAP8AAAAAAAAA/wAAAP8AAAD//////wAA
+        AP//////AAAA//////8AAAD//////wAAAP//////AAAA/wAAAP8AAAD/AAAAAAAAAP8AAAD/AAAA////
+        //8AAAD//////wAAAP//////AAAA//////8AAAD//////wAAAP8AAAD/AAAA/wAAAAAAAAD/AAAA/wAA
+        AP//////AAAA//////8AAAD//////wAAAP//////AAAA//////8AAAD/AAAA/wAAAP8AAAAAAAAA/wAA
+        AP8AAAD///////////////////////////8AAAD///////////8AAAD/AAAA/wAAAP8AAAD/AAAAAAAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AAAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAAAAAGsQQABrEEAAaxBAAGsQQABrEEAAaxBAAGsQQABrEEAAaxBAAGsQQABrEEAAaxBAAGsQQAB
+        rEEAAaxBAAGsQQ==
 </value>
   </data>
   <metadata name="dialogAddFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
